crates/tracexec-tui/src/snapshots/tracexec_tui__details_popup__tests__snapshot_details_popup_cgroup_error.snap
---
source: crates/tracexec-tui/src/details_popup.rs
expression: rendered
---
Buffer {
    area: Rect { x: 0, y: 0, width: 90, height: 80 },
    content: [
        "──────────────────────────────────────── Details ──────────── Info │ Environment │ FdInfo ",
        " Timestamp  <-                                                                            ",
        "Wed Jan  1 00:00:00 2025                                                                  ",
        " Cmdline                                                                                  ",
        "env -a echo /bin/echo                                                                     ",
        " Pid                                                                                      ",
        "4242                                                                                      ",
        " Exec Syscall                                                                             ",
        "execve                                                                                    ",
        " Exec Pid                                                                                 ",
        "4242                                                                                      ",
        " Syscall Result                                                                           ",
        "0 (Success)                                                                               ",
        " Real UID / Effective UID / Saved UID / FS UID                                            ",
        "root(0) / root(0) / root(0) / root(0)                                                     ",
        " Real GID / Effective GID / Saved GID / FS GID                                            ",
        "root(0) / root(0) / root(0) / root(0)                                                     ",
        " Supplemental Groups                                                                      ",
        "[ empty ]                                                                                 ",
        " Cgroup                                                                                   ",
        "Failed to read /proc/<pid>/cgroup: entity not found                                       ",
        " Process Status                                                                           ",
        "🟢 Running                                                                                ", // hidden by multi-width symbols: [(1, " ")]
        " Cwd                                                                                      ",
        "cwd                                                                                       ",
        " Comm (Before exec)                                                                       ",
        "comm                                                                                      ",
        " Filename                                                                                 ",
        "/bin/echo                                                                                 ",
        " Interpreters                                                                             ",
        "Unknown                                                                                   ",
        " Stdin                                                                                    ",
        "Closed                                                                                    ",
        " Stdout                                                                                   ",
        "Closed                                                                                    ",
        " Stderr                                                                                   ",
        "Closed                                                                                    ",
        " (Experimental) Cmdline with stdio                                                        ",
        "env -a echo /bin/echo 0>&- 1>&- 2>&-                                                      ",
        " (Experimental) Cmdline with fds                                                          ",
        "env -a echo /bin/echo 0>&- 1>&- 2>&-                                                      ",
        " Argv                                                                                     ",
        "["echo"]                                                                                  ",
        "                                                                                          ",
        "                                                                                          ",
        "                                                                                          ",
        "                                                                                          ",
        "                                                                                          ",
        "                                                                                          ",
        "                                                                                          ",
        "                                                                                          ",
        "                                                                                          ",
        "                                                                                          ",
        "                                                                                          ",
        "                                                                                          ",
        "                                                                                          ",
        "                                                                                          ",
        "                                                                                          ",
        "                                                                                          ",
        "                                                                                          ",
        "                                                                                          ",
        "                                                                                          ",
        "                                                                                          ",
        "                                                                                          ",
        "                                                                                          ",
        "                                                                                          ",
        "                                                                                          ",
        "                                                                                          ",
        "                                                                                          ",
        "                                                                                          ",
        "                                                                                          ",
        "                                                                                          ",
        "                                                                                          ",
        "                                                                                          ",
        "                                                                                          ",
        "                                                                                          ",
        "                                                                                          ",
        "                                                                                          ",
        "                                                                                          ",
        "──────────────────────────────────────────────────────────────────────────────────────────",
    ],
    styles: [
        x: 0, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 62, y: 0, fg: White, bg: Magenta, underline: Reset, modifier: NONE,
        x: 66, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 1, fg: White, bg: LightMagenta, underline: Reset, modifier: BOLD,
        x: 11, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 12, y: 1, fg: LightGreen, bg: Reset, underline: Reset, modifier: BOLD,
        x: 15, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 3, fg: Black, bg: LightGreen, underline: Reset, modifier: BOLD,
        x: 9, y: 3, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 4, fg: Magenta, bg: Reset, underline: Reset, modifier: NONE,
        x: 3, y: 4, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 4, y: 4, fg: White, bg: Reset, underline: Reset, modifier: ITALIC,
        x: 11, y: 4, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 12, y: 4, fg: LightBlue, bg: Reset, underline: Reset, modifier: NONE,
        x: 21, y: 4, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 5, fg: Black, bg: LightGreen, underline: Reset, modifier: BOLD,
        x: 5, y: 5, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 7, fg: Black, bg: LightGreen, underline: Reset, modifier: BOLD,
        x: 14, y: 7, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 9, fg: Black, bg: LightGreen, underline: Reset, modifier: BOLD,
        x: 10, y: 9, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 11, fg: Black, bg: LightGreen, underline: Reset, modifier: BOLD,
        x: 16, y: 11, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 12, fg: Green, bg: Reset, underline: Reset, modifier: NONE,
        x: 11, y: 12, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 13, fg: Black, bg: LightGreen, underline: Reset, modifier: BOLD,
        x: 47, y: 13, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 14, fg: White, bg: Reset, underline: Reset, modifier: BOLD,
        x: 4, y: 14, fg: Reset, bg: Reset, underline: Reset, modifier: ITALIC,
        x: 7, y: 14, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 10, y: 14, fg: White, bg: Reset, underline: Reset, modifier: BOLD,
        x: 14, y: 14, fg: Reset, bg: Reset, underline: Reset, modifier: ITALIC,
        x: 17, y: 14, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 20, y: 14, fg: White, bg: Reset, underline: Reset, modifier: BOLD,
        x: 24, y: 14, fg: Reset, bg: Reset, underline: Reset, modifier: ITALIC,
        x: 27, y: 14, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 30, y: 14, fg: White, bg: Reset, underline: Reset, modifier: BOLD,
        x: 34, y: 14, fg: Reset, bg: Reset, underline: Reset, modifier: ITALIC,
        x: 37, y: 14, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 15, fg: Black, bg: LightGreen, underline: Reset, modifier: BOLD,
        x: 47, y: 15, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 16, fg: White, bg: Reset, underline: Reset, modifier: BOLD,
        x: 4, y: 16, fg: Reset, bg: Reset, underline: Reset, modifier: ITALIC,
        x: 7, y: 16, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 10, y: 16, fg: White, bg: Reset, underline: Reset, modifier: BOLD,
        x: 14, y: 16, fg: Reset, bg: Reset, underline: Reset, modifier: ITALIC,
        x: 17, y: 16, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 20, y: 16, fg: White, bg: Reset, underline: Reset, modifier: BOLD,
        x: 24, y: 16, fg: Reset, bg: Reset, underline: Reset, modifier: ITALIC,
        x: 27, y: 16, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 30, y: 16, fg: White, bg: Reset, underline: Reset, modifier: BOLD,
        x: 34, y: 16, fg: Reset, bg: Reset, underline: Reset, modifier: ITALIC,
        x: 37, y: 16, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 17, fg: Black, bg: LightGreen, underline: Reset, modifier: BOLD,
        x: 21, y: 17, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 18, fg: Reset, bg: Reset, underline: Reset, modifier: BOLD,
        x: 9, y: 18, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 19, fg: Black, bg: LightGreen, underline: Reset, modifier: BOLD,
        x: 8, y: 19, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 20, fg: LightRed, bg: Reset, underline: Reset, modifier: BOLD | SLOW_BLINK,
        x: 51, y: 20, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 21, fg: Black, bg: LightGreen, underline: Reset, modifier: BOLD,
        x: 16, y: 21, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 22, fg: LightGreen, bg: Reset, underline: Reset, modifier: BOLD,
        x: 1, y: 22, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 2, y: 22, fg: LightGreen, bg: Reset, underline: Reset, modifier: BOLD,
        x: 10, y: 22, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 23, fg: Black, bg: LightGreen, underline: Reset, modifier: BOLD,
        x: 5, y: 23, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 25, fg: Black, bg: LightGreen, underline: Reset, modifier: BOLD,
        x: 20, y: 25, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 27, fg: Black, bg: LightGreen, underline: Reset, modifier: BOLD,
        x: 10, y: 27, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 29, fg: Black, bg: LightGreen, underline: Reset, modifier: BOLD,
        x: 14, y: 29, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 30, fg: LightRed, bg: Reset, underline: Reset, modifier: ITALIC,
        x: 7, y: 30, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 31, fg: Black, bg: LightGreen, underline: Reset, modifier: BOLD,
        x: 7, y: 31, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 32, fg: LightRed, bg: Reset, underline: Reset, modifier: NONE,
        x: 6, y: 32, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 33, fg: Black, bg: LightGreen, underline: Reset, modifier: BOLD,
        x: 8, y: 33, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 34, fg: LightRed, bg: Reset, underline: Reset, modifier: NONE,
        x: 6, y: 34, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 35, fg: Black, bg: LightGreen, underline: Reset, modifier: BOLD,
        x: 8, y: 35, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 36, fg: LightRed, bg: Reset, underline: Reset, modifier: NONE,
        x: 6, y: 36, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 37, fg: Black, bg: LightGreen, underline: Reset, modifier: BOLD,
        x: 35, y: 37, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 38, fg: Magenta, bg: Reset, underline: Reset, modifier: NONE,
        x: 3, y: 38, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 4, y: 38, fg: White, bg: Reset, underline: Reset, modifier: ITALIC,
        x: 11, y: 38, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 12, y: 38, fg: LightBlue, bg: Reset, underline: Reset, modifier: NONE,
        x: 21, y: 38, fg: LightRed, bg: Reset, underline: Reset, modifier: BOLD | ITALIC,
        x: 23, y: 38, fg: LightRed, bg: Reset, underline: Reset, modifier: BOLD,
        x: 26, y: 38, fg: LightRed, bg: Reset, underline: Reset, modifier: BOLD | ITALIC,
        x: 28, y: 38, fg: LightRed, bg: Reset, underline: Reset, modifier: BOLD,
        x: 31, y: 38, fg: LightRed, bg: Reset, underline: Reset, modifier: BOLD | ITALIC,
        x: 33, y: 38, fg: LightRed, bg: Reset, underline: Reset, modifier: BOLD,
        x: 36, y: 38, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 39, fg: Black, bg: LightGreen, underline: Reset, modifier: BOLD,
        x: 33, y: 39, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 40, fg: Magenta, bg: Reset, underline: Reset, modifier: NONE,
        x: 3, y: 40, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 4, y: 40, fg: White, bg: Reset, underline: Reset, modifier: ITALIC,
        x: 11, y: 40, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 12, y: 40, fg: LightBlue, bg: Reset, underline: Reset, modifier: NONE,
        x: 21, y: 40, fg: LightRed, bg: Reset, underline: Reset, modifier: BOLD | ITALIC,
        x: 23, y: 40, fg: LightRed, bg: Reset, underline: Reset, modifier: BOLD,
        x: 26, y: 40, fg: LightRed, bg: Reset, underline: Reset, modifier: BOLD | ITALIC,
        x: 28, y: 40, fg: LightRed, bg: Reset, underline: Reset, modifier: BOLD,
        x: 31, y: 40, fg: LightRed, bg: Reset, underline: Reset, modifier: BOLD | ITALIC,
        x: 33, y: 40, fg: LightRed, bg: Reset, underline: Reset, modifier: BOLD,
        x: 36, y: 40, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 41, fg: Black, bg: LightGreen, underline: Reset, modifier: BOLD,
        x: 6, y: 41, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
    ]
}
